Fixing image stretch

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-wrap: NOwrap;
+    flex-wrap: nowrap;
 }
 
 .row-center {
@@ -47,6 +47,10 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
+}
+
+img {
+    max-width: 100%;
 }
 
 .vert-align {
